force-app/main/default/objects/Answer__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <description>The actual answer text to a question is saved here.</description>
    <label>Answer Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>