force-app/main/default/objects/Answer__c/fields/AssociatedQuestion__c.field-meta.xml
<CustomField>
    <fullName>AssociatedQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Question</description>
    <label>Associated Question</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CLQ_Standard_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Question</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CLQ_Standard_Detail__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>