force-app/main/default/objects/Answer__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment text for a particular question.</description>
    <label>Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>