force-app/main/default/objects/Answer__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <formula>TEXT(AssociatedQuestion__r.Domain__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Name</label>
    <type>Text</type>
</CustomField>