force-app/main/default/objects/Answer__c/fields/Met_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Met_Not_Met__c</fullName>
    <label>Met/Not Met</label>
    <length>20</length>
    <type>Text</type>
</CustomField>