force-app/main/default/objects/Answer__c/fields/Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Association to a Program Transaction record.</description>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>