force-app/main/default/objects/Answer__c/fields/Question_Body__c.field-meta.xml
<CustomField>
    <fullName>Question_Body__c</fullName>
    <label>Question Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>