force-app/main/default/objects/Answer__c/validationRules/checkNumericalForProgramNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>checkNumericalForProgramNumber</fullName>
    <active>true</active>
    <description>Validation to check if the user entered only numerical value for Program number</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; 
AND(
Domain_Name__c = &apos;Change of Owner Registration Questions&apos; ,
AssociatedQuestion__r.Name = &apos;SE - 00016&apos; ,
NOT(ISBLANK(Answer_Text__c)) , 
NOT(ISNUMBER( Answer_Text__c)) 

)</errorConditionFormula>
    <errorMessage>Program number should have only numerical value</errorMessage>
</ValidationRule>