force-app/main/default/objects/Answer__c/validationRules/noHighProgramRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>noHighProgramRestriction</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; 
AND( 
Domain_Name__c = &apos;Expedited Registration Questions&apos; , 
AssociatedQuestion__r.Name = &apos;SE - 00001&apos; , 
NOT(ISBLANK(Answer_Text__c)) , 
Answer_Text__c = &apos;No&apos; 

)</errorConditionFormula>
    <errorMessage>Based on the information provided, your program is not eligible for an expedited rating at this time. To submit a registration for an initial rating, please withdraw the expedited rating registration.</errorMessage>
</ValidationRule>